--- a/User/Masterorder.master
+++ b/User/Masterorder.master
@@ -30,6 +30,8 @@
      <link href="../css/orderstyle.css" rel="stylesheet" />
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="The description of my page" />
 </head>
 <body>
     <form id="form1" runat="server">
