--- a/User/MasterPage.master
+++ b/User/MasterPage.master
@@ -81,6 +81,10 @@
         <button runat="server" type="submit" class="glow-on-hover" onclick="btnsignup_Click"/> my basket
         </button>
             </a>
+          <a href="watch.aspx" style="font-size:x-large; color:white; text-decoration:none; text-align:center; top: 700px; left: 920px;"
+        <button runat="server" type="submit" class="glow-on-hover" onclick="btnsignup_Click"/> watch
+        </button>
+            </a>
          <a href="../Admin/alogin.aspx" style="font-size:x-large; color:white; text-decoration:none; text-align:center; top: 60px; left: 1680px;"
            <button runat="server" type="button" class="button" onclick="btnsignup_Click"/>
                <span class="button__text">admin</span>
